queries python file and user analysis changes

--- a/notebooks/kiva/user_analysis.ipynb
+++ b/notebooks/kiva/user_analysis.ipynb
@@ -37,7 +37,6 @@
     "import pandas as pd\n",
     "pd.set_option('display.max_rows', 500)\n",
     "pd.set_option('display.max_columns', 500)\n",
-    "\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
@@ -105,16 +104,25 @@
     "# Initialize query library\n",
     "from optiml.queries import SNFLKQuery\n",
     "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
-    "sdate = '2022-10-01'\n",
-    "edate = '2022-10-31'\n",
+    "sdate = '2022-09-12'\n",
+    "edate = '2022-10-12'\n",
     "print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# User Analysis"
+    "# User Analysis\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Most idle users"
    ]
   },
   {
@@ -124,10 +132,9 @@
    "outputs": [],
    "source": [
     "## This would be my starting point for users that are a security risk\n",
-    "idle_user_start_date = '2022-04-01'\n",
-    "idle_user_end_date = '2022-10-31'\n",
-    "df = qlib.idle_users(idle_user_start_date, idle_user_end_date)\n",
-    "df.head()"
+    "df = qlib.idle_users(sdate,edate)\n",
+    "df.to_csv('/home/manas/DS_data/idle_users.csv')\n",
+    "# df.head()"
    ]
   },
   {
@@ -140,7 +147,8 @@
     "# data_canada = px.data.gapminder().query(\"country == 'Canada'\")\n",
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter(\n",
-    "    x=df['last_success_login'], y=[0]*len(df['last_success_login'].to_list()), mode='markers', marker_size=20\n",
+    "    x=df['last_success_login'], y=[0]*len(df['last_success_login'].to_list()), mode='markers', marker_size=20, customdata=df['name'], hovertemplate=\"<br>\".join([\n",
+    "        \"Last successful login: %{x}\",\"name: %{customdata}\"])\n",
     "))\n",
     "fig.update_xaxes(showgrid=False, title_text=\"last sucess login\")\n",
     "fig.update_yaxes(showgrid=False, \n",
@@ -151,15 +159,55 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis\n",
+    "<div class=\"alert alert-info\">\n",
+    "    \n",
+    "* 39 users have not logged into snowflake before 12th September, 2022.\n",
+    "* 16 users have not logged in since 2020 :\n",
+    "    * 2 users since 2020.\n",
+    "    * 2 users since 2019.\n",
+    "    * 7 users since 2018.\n",
+    "    * 4 users since 2017.\n",
+    "    * 1 user since 2016. \n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Actions and Recommendations\n",
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "* Users who have not logged in since 2020 can be disabled or formally onboarded.\n",
+    "    \n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Users that have never logged in"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Users never logged in but not deleted\n",
-    "idle_user_start_date = '2022-04-01'\n",
-    "idle_user_end_date = '2022-10-31'\n",
-    "df = qlib.users_never_logged_in(idle_user_start_date, idle_user_end_date)\n",
+    "\n",
+    "df = qlib.users_never_logged_in(sdate,edate)\n",
+    "\n",
     "df.head()"
    ]
   },
@@ -171,7 +219,8 @@
    "source": [
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter(\n",
-    "    x=df['created_on'], y=[0]*len(df['created_on'].to_list()), mode='markers', marker_size=20\n",
+    "    x=df['created_on'], y=[0]*len(df['created_on'].to_list()), mode='markers', marker_size=20, customdata=df['name'], hovertemplate=\"<br>\".join([\n",
+    "        \"Created on: %{x}\",\"name: %{customdata}\"])\n",
     "))\n",
     "fig.update_xaxes(showgrid=False, title_text=\"Created on\")\n",
     "fig.update_yaxes(showgrid=False, \n",
@@ -182,13 +231,132 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis\n",
+    "<div class=\"alert alert-info\">\n",
+    "    \n",
+    "* 4 users have not logged in since date of creation.\n",
+    "* SNOWFLAKE user created an account in June 2016 and hasn't logged in since.\n",
+    " \n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Actions and Recommendations\n",
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "* SNOWFLAKE user can be disabled.\n",
+    "    \n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Users and queries that scan full tables"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Users"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.users_full_table_scans(start_date='2018-04-01', end_date='2022-10-31')\n",
+    "df=qlib.users_full_table_scans(sdate,edate)\n",
+    "df.to_csv('/home/manas/DS_data/users_scan_full_tables.csv')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x=df['count_of_queries'], y=[0]*len(df['count_of_queries'].to_list()), mode='markers', marker_size=20,customdata=df['user_name'], hovertemplate=\"<br>\".join([\n",
+    "        \"Count of queries: %{x}\",\"Username: %{customdata}\"])\n",
+    "))\n",
+    "fig.update_xaxes(showgrid=False, title_text=\"count of queries\")\n",
+    "fig.update_yaxes(showgrid=False, \n",
+    "                 zeroline=True, zerolinecolor='black', zerolinewidth=3,\n",
+    "                 showticklabels=False)\n",
+    "fig.update_layout(height=200, plot_bgcolor='white', title_text=\"Full table scans\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qlib.queries_full_table_scan(sdate,edate)\n",
+    "df.to_csv('/home/manas/DS_data/queries_scan_full_tables.csv')\n",
+    "# df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis\n",
+    "<div class=\"alert alert-info\">\n",
+    "    \n",
+    "* Users VERTEX_API_PROD,FIVETRAN_USER, FIVETRAN_USER,FIVETRAN_USER_DEV, LOOKER_PROD and VERTEX_API_DEV run queries that scan almost all partitions of the table.\n",
+    "\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Actions and Recommendations\n",
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "* Users can be trained to run more optimized queries.\n",
+    "* Cluster keys can be defined for the queries they execute so that number of partitions scanned is less.\n",
+    "    \n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Users that scan the most data"
    ]
   },
   {
@@ -207,7 +375,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.idle_roles(start_date=\"2021-01-01\", end_date=\"2022-02-02\")\n",
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x=df['avg_pct_scanned'], y=[0]*len(df['avg_pct_scanned'].to_list()), mode='markers', marker_size=20,customdata=df['warehouse_name'], hovertemplate=\"<br>\".join([\n",
+    "        \"Count of queries: %{x}\",\"warehouse name: %{customdata}\"])\n",
+    "))\n",
+    "fig.update_xaxes(showgrid=False, title_text=\"Average partitions scanned\")\n",
+    "fig.update_yaxes(showgrid=False, \n",
+    "                 zeroline=True, zerolinecolor='black', zerolinewidth=3,\n",
+    "                 showticklabels=False)\n",
+    "fig.update_layout(height=200, plot_bgcolor='white', title_text=\"Heavy users\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Idle roles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qlib.idle_roles(sdate,edate)\n",
     "df.head()"
    ]
   },
@@ -219,7 +414,8 @@
    "source": [
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter(\n",
-    "    x=df['created_on'], y=[0]*len(df['created_on'].to_list()), mode='markers', marker_size=20\n",
+    "    x=df['created_on'], y=[0]*len(df['created_on'].to_list()), mode='markers', marker_size=20,customdata=df[\"name\"], hovertemplate=\"<br>\".join([\n",
+    "        \"created on: %{x}\",\"name: %{customdata}\"])\n",
     "))\n",
     "fig.update_xaxes(showgrid=False, title_text=\"Created on\")\n",
     "fig.update_yaxes(showgrid=False, \n",
@@ -235,27 +431,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Warehouse credit usage over time\n",
-    "\n",
-    "\n",
-    "\n",
-    "app = Dash(__name__)\n",
-    "\n",
-    "\n",
-    "\n",
-    "fig = px.scatter(df_expensiveq, x=df_expensiveq[\"query_id\"], y=df_expensiveq[\"relative_performance_cost\"],\n",
-    "                 color=df_expensiveq[\"user_name\"], hover_name=df_expensiveq[\"warehouse_size\"],size_max=30)\n",
-    "fig.update_traces(marker_size=20)\n",
-    "\n",
-    "\n",
-    "app.layout = html.Div([\n",
-    "    dcc.Graph(\n",
-    "        id='life-exp-vs-gdp',\n",
-    "        figure=fig\n",
-    "    )\n",
-    "])\n",
-    "\n",
-    "fig.show()"
+    "df=qlib.table_streams(sdate,edate)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TASK ANALYSIS"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Failed tasks"
    ]
   },
   {
@@ -264,81 +457,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app = Dash(__name__)\n",
-    "\n",
-    "\n",
-    "\n",
-    "app.layout = html.Div([\n",
-    "    html.Div([\n",
-    "\n",
-    "        html.Div([\n",
-    "            dcc.Dropdown(\n",
-    "                df['user_name'].unique(),\n",
-    "                'User_name',\n",
-    "                id='xaxis-column'\n",
-    "            ),\n",
-    "            dcc.RadioItems(\n",
-    "                ['Linear', 'Log'],\n",
-    "                'Linear',\n",
-    "                id='xaxis-type',\n",
-    "                inline=True\n",
-    "            )\n",
-    "        ], style={'width': '48%', 'display': 'inline-block'}),\n",
-    "\n",
-    "        html.Div([\n",
-    "            dcc.Dropdown(\n",
-    "                df['Indicator Name'].unique(),\n",
-    "                'Life expectancy at birth, total (years)',\n",
-    "                id='yaxis-column'\n",
-    "            ),\n",
-    "            dcc.RadioItems(\n",
-    "                ['Linear', 'Log'],\n",
-    "                'Linear',\n",
-    "                id='yaxis-type',\n",
-    "                inline=True\n",
-    "            )\n",
-    "        ], style={'width': '48%', 'float': 'right', 'display': 'inline-block'})\n",
-    "    ]),\n",
-    "\n",
-    "    dcc.Graph(id='indicator-graphic'),\n",
-    "\n",
-    "    dcc.Slider(\n",
-    "        df['Year'].min(),\n",
-    "        df['Year'].max(),\n",
-    "        step=None,\n",
-    "        id='year--slider',\n",
-    "        value=df['Year'].max(),\n",
-    "        marks={str(year): str(year) for year in df['Year'].unique()},\n",
-    "\n",
-    "    )\n",
-    "])\n",
-    "\n",
-    "\n",
-    "@app.callback(\n",
-    "    Output('indicator-graphic', 'figure'),\n",
-    "    Input('xaxis-column', 'value'),\n",
-    "    Input('yaxis-column', 'value'),\n",
-    "    Input('xaxis-type', 'value'),\n",
-    "    Input('yaxis-type', 'value'),\n",
-    "    Input('year--slider', 'value'))\n",
-    "def update_graph(xaxis_column_name, yaxis_column_name,\n",
-    "                 xaxis_type, yaxis_type,\n",
-    "                 year_value):\n",
-    "    dff = df[df['Year'] == year_value]\n",
-    "\n",
-    "    fig = px.scatter(x=dff[dff['Indicator Name'] == xaxis_column_name]['Value'],\n",
-    "                     y=dff[dff['Indicator Name'] == yaxis_column_name]['Value'],\n",
-    "                     hover_name=dff[dff['Indicator Name'] == yaxis_column_name]['Country Name'])\n",
-    "\n",
-    "    fig.update_layout(margin={'l': 40, 'b': 40, 't': 10, 'r': 0}, hovermode='closest')\n",
-    "\n",
-    "    fig.update_xaxes(title=xaxis_column_name,\n",
-    "                     type='linear' if xaxis_type == 'Linear' else 'log')\n",
-    "\n",
-    "    fig.update_yaxes(title=yaxis_column_name,\n",
-    "                     type='linear' if yaxis_type == 'Linear' else 'log')\n",
-    "\n",
-    "    return fig"
+    "df=qlib.failed_tasks(sdate,edate)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Long running tasks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qlib.long_running_tasks(sdate,edate)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x=df['duration_seconds'], y=[0]*len(df['duration_seconds'].to_list()), mode='markers', marker_size=20,customdata=df[\"name\"], hovertemplate=\"<br>\".join([\n",
+    "        \"duration seconds: %{x}\",\"name: %{customdata}\"])\n",
+    "))\n",
+    "fig.update_xaxes(showgrid=False, title_text=\"Created on\")\n",
+    "fig.update_yaxes(showgrid=False, \n",
+    "                 zeroline=True, zerolinecolor='black', zerolinewidth=3,\n",
+    "                 showticklabels=False)\n",
+    "fig.update_layout(height=200, plot_bgcolor='white', title_text=\"Idle roles\")\n",
+    "fig.show()"
    ]
   }
  ],
@@ -358,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.2 (default, May  7 2020, 20:00:49) \n[GCC 7.3.0]"
   },
   "vscode": {
    "interpreter": {
