--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -135,6 +135,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### STANDARD DEVIATION AND MEAN OF CREDITS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qlib.total_breakdown_analysis(sdate,edate)\n",
+    "print(df)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -397,6 +415,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -549,7 +568,7 @@
    "outputs": [],
    "source": [
     "df=qlib.cost_by_partner_tool_ts(sdate, edate)\n",
-    "# df.head()"
+    "# df.to_csv('/home/manas/DS_data/partner_tools.csv')"
    ]
   },
   {
@@ -616,7 +635,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_warehouse = [d for _, d in df.groupby(['warehouse_name'])]"
+    "df_titles=sorted(df[\"warehouse_name\"].unique())\n",
+    "df_warehouse = [d for _, d in df.groupby(['warehouse_name'])]\n",
+    "\n"
    ]
   },
   {
@@ -625,9 +646,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##TODO: Convert these to subplots so they dont have to be called separately\n",
-    "fig = px.area(df_warehouse[0], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"DAILY_REFRESH_WH\")\n",
-    "fig.show()"
+    "for i in range(len(df_warehouse)):\n",
+    "    fig = px.area(df_warehouse[i], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=df_titles[i])\n",
+    "    fig.show()"
    ]
   },
   {
@@ -636,28 +657,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.area(df_warehouse[1], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"DEV_WH\")\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = px.area(df_warehouse[2], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"ML_WH\")\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = px.area(df_warehouse[3], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"PROD_WH\")\n",
-    "fig.show()"
+    "# fig = px.area(df_warehouse[3], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"PROD_WH\")\n",
+    "# fig.show()"
    ]
   },
   {
@@ -713,7 +714,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "sf",
    "language": "python",
    "name": "python3"
   },
@@ -727,11 +728,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
+    "hash": "ba286fab723f3beadf2310fa20d811dff5d5606e9e08a95b52f51185bcb3e19b"
    }
   }
  },
