--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -714,7 +714,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sf",
+   "display_name": "optiml",
    "language": "python",
    "name": "python3"
   },
@@ -728,11 +728,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ba286fab723f3beadf2310fa20d811dff5d5606e9e08a95b52f51185bcb3e19b"
+    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
    }
   }
  },
