basic predictive analysis of total cost

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -105,8 +105,13 @@
     "# Initialize query library\n",
     "from optiml.queries import SNFLKQuery\n",
     "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
+    "# Initialize analysis dates\n",
+    "from datetime import datetime\n",
+    "from dateutil.relativedelta import relativedelta\n",
     "sdate = '2022-09-12'\n",
     "edate = '2022-10-12'\n",
+    "\n",
+    "\n",
     "# Most recent rolling month that we have data for\n",
     "# print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
    ]
@@ -135,11 +140,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### STANDARD DEVIATION AND MEAN OF CREDITS"
+    "### Function for date time analysis"
    ]
   },
   {
@@ -148,8 +152,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.total_breakdown_analysis(sdate,edate)\n",
-    "print(df)"
+    "# df=qlib.total_breakdown_analysis(sdate,edate)\n",
+    "# print(df)\n",
+    "def get_previous_dates(sdate, edate, date_shift_months):\n",
+    "    sdate_datetime = datetime.strptime(sdate,'%Y-%m-%d')\n",
+    "    prev_sdates_datetime = datetime.strptime(sdate,'%Y-%m-%d') - relativedelta(months=date_shift_months)\n",
+    "    prev_sdates = prev_sdates_datetime.strftime(\"%Y-%m-%d\")\n",
+    "    edate_datetime = datetime.strptime(edate,'%Y-%m-%d')\n",
+    "    prev_edates_datetime = datetime.strptime(edate,'%Y-%m-%d') - relativedelta(months=date_shift_months)\n",
+    "    prev_edates = prev_edates_datetime.strftime(\"%Y-%m-%d\")\n",
+    "    return prev_sdates, prev_edates"
    ]
   },
   {
@@ -157,6 +169,22 @@
    "metadata": {},
    "source": [
     "## Cost by usage category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Get usage for previous month as a predictive sanity check\n",
+    "p1_sdate, p1_edate = get_previous_dates(sdate, edate, 1)\n",
+    "df = qlib.total_cost_breakdown_ts(p1_sdate, p1_edate)\n",
+    "df = df.fillna('Unassigned')\n",
+    "df_by_usage_category = df.groupby(\"category_name\").sum(\"numeric_only\").reset_index()\n",
+    "df_by_usage_category.loc[len(df_by_usage_category.index)] = ['Total', df_by_usage_category['credits'].sum(), df_by_usage_category['dollars'].sum()]\n",
+    "df_by_usage_category_prev = df_by_usage_category.round(2)\n",
+    "print(tabulate(df_by_usage_category_prev, headers='keys', tablefmt='rounded_outline', showindex=False))"
    ]
   },
   {
@@ -176,18 +204,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_by_usage_category = df.groupby(\"category_name\").sum(\"numeric_only\").reset_index()\n",
-    "# df_by_usage_category"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df_by_usage_category = df.groupby(\"category_name\").sum(\"numeric_only\").reset_index()\n",
-    "df_by_usage_category.loc[len(df.index)] = ['Total', df_by_usage_category['credits'].sum(), df_by_usage_category['dollars'].sum()]\n",
+    "df_by_usage_category.loc[len(df_by_usage_category.index)] = ['Total', df_by_usage_category['credits'].sum(), df_by_usage_category['dollars'].sum()]\n",
     "df_by_usage_category = df_by_usage_category.round(2)\n",
     "print(tabulate(df_by_usage_category, headers='keys', tablefmt='rounded_outline', showindex=False))"
    ]
@@ -198,28 +216,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pie charts for total cost breakdown\n",
-    "## Remove the last row of totals for the plot\n",
-    "df_by_usage_category.reset_index(inplace=True)\n",
-    "df_by_usage_category.drop(columns=[\"index\"], inplace=True)\n",
-    "df_by_usage_category = df_by_usage_category.drop(len(df_by_usage_category)-1) \n",
-    "fig = make_subplots(\n",
-    "    rows=1, cols=2,\n",
-    "    specs=[[{\"type\": \"pie\"},{\"type\": \"pie\"}]],\n",
-    "    subplot_titles=(\"Dollars\", \"Credits\")\n",
-    ")\n",
-    "\n",
-    "fig.add_trace(go.Pie(labels=df_by_usage_category['category_name'].tolist(), values=df_by_usage_category['dollars'].tolist(),name=\"Dollars\", rotation=45, marker_colors=color_scheme),row=1,col=1)\n",
-    "fig.add_trace(go.Pie(labels=df_by_usage_category['category_name'].tolist(), values=df_by_usage_category['credits'].tolist(),name='Credits', rotation=45, marker_colors=color_scheme),row=1,col=2)\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    title={\n",
-    "        'text': \"Breakdown of total cost by usage category\",\n",
-    "        'y':0.1,\n",
-    "        'x':0.5,\n",
-    "        'xanchor': 'center',\n",
-    "        'yanchor': 'bottom'})\n",
-    "fig.show()\n"
+    "df_change = pd.DataFrame().assign(category_name=df_by_usage_category[\"category_name\"])\n",
+    "df_change[\"percent_change\"] = ((df_by_usage_category[\"dollars\"] - df_by_usage_category_prev[\"dollars\"])/df_by_usage_category_prev[\"dollars\"]*100).round(2)\n",
+    "print(tabulate(df_change, headers='keys', tablefmt='rounded_outline', showindex=False))"
    ]
   },
   {
@@ -298,6 +297,15 @@
     "#### Storage\n",
     "* Storage cost is a small fraction of the `$` budget. Storage is charged by flat `$` amount per TB starting at `$`23/TB. For the timeseries we have spread that evenly through the day.\n",
     "* Storage costs are almost flat during the period.\n",
+    "    \n",
+    "#### General trends\n",
+    "* Month over month:\n",
+    "    * Total ~ +1.4%\n",
+    "    * Compute ~ +2%\n",
+    "    * Cloud Services ~ -7.5%\n",
+    "    * Storage ~ -4.5%\n",
+    "* Since Compute is majority of the expense a smaller increase in it may have a significant impact\n",
+    "* This is very basic predictive analysis - more complex analyses can be made available in the pilot    \n",
     "\n",
     "</div>"
    ]
@@ -415,7 +423,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -714,7 +721,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "optiml",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -728,7 +735,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
